Bug 364719 - "Resizers of images are positioned wrongly when page is scrolled" [p=mfenniak-moz@mathieu.fenniak.net (Mathieu Fenniak) / chris@pearce.org.nz (Chris Pearce [cpearce]) r=peterv r+sr=roc a=blocking1.9+]